Added some more problems